@@ -18,6 +18,8 @@
 - Add persistence_file config option to allow changing the filename of the
   persistence database. This allows multiple mosquitto DBs to be stored in the
   same location whilst keeping persistence_location compatible with rsmb.
+- Don't store QoS=0 messages for disconnected clients. Fixes bug #572608. This
+  wasn't correctly fixed in version 0.5.
 
 0.5.4 - 20100311
 ================
